fix: info widget overflow prop

--- a/src/widgets/SummaryWidget/SummaryWidget.less
+++ b/src/widgets/SummaryWidget/SummaryWidget.less
@@ -1,29 +1,30 @@
-.widget-content {
-    position: relative;
-  }
-  .date-select {
-    position: absolute !important;
-    top: 8px;
-    right: 39px;
-  }
-  .info-heading {
-    font-size: 11.2px;
-    font-weight: 700;
-    height: 16px;
-    line-height: 16.8px;
-    margin-top: 4px;
-    text-transform: uppercase;
-  }
-  
-  .info-content {
-    color: rgb(90, 92, 105);
-    font-size: 20px;
-    font-weight: 700;
-  }
-  
-  .info-snip {
-      border-left: 3px solid #1890ff;
-      margin: 16px 16px 0px 24px;
-      padding-left: 8px;
-  }
-  
+.widget-info-content {
+  position: relative;
+  height: calc(100% - 48px);
+  overflow: scroll;
+}
+.date-select {
+  position: absolute !important;
+  top: 8px;
+  right: 39px;
+}
+.info-heading {
+  font-size: 11.2px;
+  font-weight: 700;
+  height: 16px;
+  line-height: 16.8px;
+  margin-top: 4px;
+  text-transform: uppercase;
+}
+
+.info-content {
+  color: rgb(90, 92, 105);
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.info-snip {
+  border-left: 3px solid #1890ff;
+  margin: 16px 16px 0px 24px;
+  padding-left: 8px;
+}
